@@ -1,3 +1,4 @@
 CHANGELOG
 ===========
 cody - created project
+sam - created tasks model
